# Marching-Cubes-Terrain

./: .gitignore  CMakeLists.txt  README.md
Terrain Generator/: CMakeLists.txt  framework.h  geometry.h  main.cpp  object.h  renderstate.h  scene.h  shader.h  terrainshader.h
scripts/: build.sh
